package taskman.frontend;

@FunctionalInterface
public interface MethodCall {
	void call() throws Exception;
}
