package taskman.frontend.sections;

/**
 * This class represents an error that is thrown when a user cancels a section.
 * @author Alexander Braekevelt
 */
public class Cancel extends Exception {}
