@startuml

title __SECTIONS's Class Diagram__\n

  package taskman {
    package taskman.frontend {
      package taskman.frontend.sections {
        class Cancel {
        }
      }
    }
  }
  

  class WrappedPrintWriter {
      - printWriter : PrintWriter
      ~ WrappedPrintWriter()
      ~ lock()
      ~ println()
  }
  

  class WrappedPrintStream {
      - printStream : PrintStream
      ~ WrappedPrintStream()
      ~ lock()
      ~ println()
  }
  

  abstract class PrintStreamOrWriter {
      - PrintStreamOrWriter()
      {abstract} ~ lock()
      {abstract} ~ println()
  }
  

  class SentinelHolder {
      {static} + STACK_TRACE_ELEMENT_SENTINEL : StackTraceElement
      {static} + STACK_TRACE_SENTINEL : StackTraceElement[]
      - SentinelHolder()
  }
  

  package taskman {
    package taskman.frontend {
      package taskman.frontend.sections {
        class FormSection {
            - withCancel : Boolean
            - questions : List<String>
            - answers : List<String>
            + FormSection()
            + show()
            + hasAnswers()
            + getAnswer()
            - resetAnswers()
        }
      }
    }
  }
  

  package taskman {
    package taskman.frontend {
      package taskman.frontend.sections {
        class InfoSection {
            - text : String
            - halt : boolean
            + InfoSection()
            + show()
        }
      }
    }
  }
  

  package taskman {
    package taskman.frontend {
      package taskman.frontend.sections {
        class MenuSection {
            - actions : Map<String, MethodCall>
            + MenuSection()
            + addOption()
            + show()
        }
      }
    }
  }
  

  package taskman {
    package taskman.frontend {
      package taskman.frontend.sections {
        interface MethodCall {
            {abstract} + call()
        }
      }
    }
  }
  

  package taskman {
    package taskman.frontend {
      package taskman.frontend.sections {
        abstract class Section {
            {abstract} + show()
            ~ print()
            ~ println()
            ~ inputString()
            ~ inputAnswer()
            ~ inputValidAnswer()
        }
      }
    }
  }
  

  package taskman {
    package taskman.frontend {
      package taskman.frontend.sections {
        class SelectionSection {
            - withCancel : Boolean
            - cancelText : String
            - options : List<String>
            - answer : Integer
            + SelectionSection()
            + SelectionSection()
            + addOption()
            + addOptions()
            + show()
            + hasAnswer()
            + getAnswer()
            + getAnswerNumber()
            - resetAnswer()
        }
      }
    }
  }
  

  package taskman {
    package taskman.frontend {
      package taskman.frontend.sections {
        class TitleDecoratorSection {
            - title : String
            {static} - decoration : char
            {static} - length : int
            + TitleDecoratorSection()
            + show()
            - repeat()
        }
      }
    }
  }
  

  Cancel +-down- WrappedPrintWriter
  Cancel +-down- WrappedPrintStream
  Cancel +-down- PrintStreamOrWriter
  Cancel +-down- SentinelHolder
  FormSection -up-|> Section
  InfoSection -up-|> Section
  MenuSection -up-|> Section
  MenuSection o-- SelectionSection : selectionSection
  SelectionSection -up-|> Section
  TitleDecoratorSection -up-|> Section
  TitleDecoratorSection o-- Section : section


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
